--- a/build.gradle
+++ b/build.gradle
@@ -1,46 +1,52 @@
-import jdk.internal.dynalink.linker.LinkerServices
+import com.gtnewhorizons.retrofuturagradle.mcp.ReobfuscatedJar
+import org.jetbrains.gradle.ext.Gradle
 
-buildscript {
-    repositories {
-        mavenCentral()
-        maven {
-            name 'Forge'
-            url 'https://maven.minecraftforge.net'
-        }
-    }
-    dependencies {
-        classpath 'com.anatawa12.forge:ForgeGradle:2.3-1.0.7'
-    }
+plugins {
+    id("java")
+    id("java-library")
+    id("org.jetbrains.gradle.plugin.idea-ext") version "1.1.7"
+    id("com.gtnewhorizons.retrofuturagradle") version "1.3.3"
+    id("com.matthewprenger.cursegradle") version "1.4.0"
 }
-
-apply plugin: 'net.minecraftforge.gradle.forge'
 
 // Add version to the jar name
 version project.version
 
+// Set the toolchain version to decouple the Java we run Gradle with from the Java used to compile and run the mod
+java {
+    toolchain {
+        languageVersion.set(JavaLanguageVersion.of(8))
+        vendor.set(org.gradle.jvm.toolchain.JvmVendorSpec.ADOPTIUM)
+    }
+    // Generate sources and javadocs jars when building and publishing
+    withSourcesJar()
+    withJavadocJar()
+}
+
 minecraft {
-    version = '1.12.2-14.23.5.2847'
-    mappings = 'stable_39'
-    runDir = 'run'
+    mcVersion = '1.12.2'
 
     def args = ['-Dforge.logging.console.level=debug']
 
-    replace('@ID@', project.id)
-    replace('@VERSION@', project.version)
-    replaceIn('ModReference.java')
+    injectedTags.put('ID', project.id)
+    injectedTags.put('VERSION', project.version)
 }
 
-runClient {
-    args '--username=Dev'
+// Generate a my.project.Tags class with the version number as a field
+tasks.injectTags.configure {
+    outputClassName.set("io.redstudioragnarok.${project.id}.Tags")
 }
 
 // Replace id, and version in `mcmod.info`
 processResources {
     inputs.property 'id', project.id
     inputs.property 'version', project.version
-    from(sourceSets.main.resources.srcDirs) {
+    filesMatching(['mcmod.info', 'pack.mcmeta']) { fcd ->
         include 'mcmod.info'
-        expand 'id': project.id, 'version': project.version
+        fcd.expand (
+                'id': project.id,
+                'version': project.version
+        )
     }
 }
 
@@ -54,6 +60,12 @@ repositories {
     maven {
         name 'Curse Maven'
         url "https://cursemaven.com"
+        maven {
+            url "https://cursemaven.com"
+            content {
+                includeGroup "curse.maven"
+            }
+        }
     }
 }
 
@@ -61,23 +73,55 @@ dependencies {
     implementation 'net.jafama:jafama:2.+'
     embed 'net.jafama:jafama:2.+'
 
-    deobfCompile 'curse.maven:LLibrary-243298:2504999'
-    deobfCompile 'curse.maven:MowziesMobs-250498:3048685'
+    implementation rfg.deobf("curse.maven:LLibrary-243298:2504999")
+    implementation rfg.deobf("curse.maven:MowziesMobs-250498:3048685")
 
-    deobfCompile 'curse.maven:ElenaiDodge2-442962:3343308'
+    implementation rfg.deobf("curse.maven:ElenaiDodge2-442962:3343308")
 }
 
 jar {
-    // Add all embedded dependencies into the jar
-    from(configurations.embed.collect {it.isDirectory() ? it : zipTree(it)})
-
     manifest.attributes([
             'ModSide': 'BOTH',
     ])
+
+    // Add all embedded dependencies into the jar
+    from(provider{ configurations.embed.collect {it.isDirectory() ? it : zipTree(it)} })
 }
 
 idea {
+    module { inheritOutputDirs = true }
+
     module {
         excludeDirs = [file(".github"), file(".gradle"), file(".idea"), file("build"), file("gradle"), file("run")]
     }
+
+    project { settings {
+        runConfigurations {
+            "1. Run Client"(Gradle) {
+                taskNames = ["runClient"]
+            }
+            "2. Run Server"(Gradle) {
+                taskNames = ["runServer"]
+            }
+            "3. Run Obfuscated Client"(Gradle) {
+                taskNames = ["runObfClient"]
+            }
+            "4. Run Obfuscated Server"(Gradle) {
+                taskNames = ["runObfServer"]
+            }
+        }
+
+        compiler.javac {
+            afterEvaluate {
+                javacAdditionalOptions = "-encoding utf8"
+                moduleJavacAdditionalOptions = [
+                        (project.id + ".main"): tasks.compileJava.options.compilerArgs.collect { '"' + it + '"' }.join(' ')
+                ]
+            }
+        }
+    }}
+}
+
+tasks.named("processIdeaSettings").configure {
+    dependsOn("injectTags")
 }
