--- a/build.gradle
+++ b/build.gradle
@@ -1,4 +1,3 @@
-import com.gtnewhorizons.retrofuturagradle.mcp.ReobfuscatedJar
 import org.jetbrains.gradle.ext.Gradle
 
 plugins {
@@ -16,7 +15,7 @@ version project.version
 java {
     toolchain {
         languageVersion.set(JavaLanguageVersion.of(8))
-        vendor.set(org.gradle.jvm.toolchain.JvmVendorSpec.ADOPTIUM)
+        vendor.set(JvmVendorSpec.ADOPTIUM)
     }
     // Generate sources and javadocs jars when building and publishing
     withSourcesJar()
@@ -26,7 +25,7 @@ java {
 minecraft {
     mcVersion = '1.12.2'
 
-    def args = ['-Dforge.logging.console.level=debug']
+    username = "Desoroxxx"
 
     injectedTags.put('ID', project.id)
     injectedTags.put('VERSION', project.version)
@@ -80,12 +79,12 @@ dependencies {
 }
 
 jar {
+    // Add all embedded dependencies into the jar
+    from(provider{ configurations.embed.collect {it.isDirectory() ? it : zipTree(it)} })
+
     manifest.attributes([
             'ModSide': 'BOTH',
     ])
-
-    // Add all embedded dependencies into the jar
-    from(provider{ configurations.embed.collect {it.isDirectory() ? it : zipTree(it)} })
 }
 
 idea {
@@ -97,16 +96,16 @@ idea {
 
     project { settings {
         runConfigurations {
-            "1. Run Client"(Gradle) {
+            "1. Client"(Gradle) {
                 taskNames = ["runClient"]
             }
-            "2. Run Server"(Gradle) {
+            "2. Server"(Gradle) {
                 taskNames = ["runServer"]
             }
-            "3. Run Obfuscated Client"(Gradle) {
+            "3. Obfuscated Client"(Gradle) {
                 taskNames = ["runObfClient"]
             }
-            "4. Run Obfuscated Server"(Gradle) {
+            "4. Obfuscated Server"(Gradle) {
                 taskNames = ["runObfServer"]
             }
         }
@@ -114,9 +113,7 @@ idea {
         compiler.javac {
             afterEvaluate {
                 javacAdditionalOptions = "-encoding utf8"
-                moduleJavacAdditionalOptions = [
-                        (project.id + ".main"): tasks.compileJava.options.compilerArgs.collect { '"' + it + '"' }.join(' ')
-                ]
+                moduleJavacAdditionalOptions = [(project.id + ".main"): tasks.compileJava.options.compilerArgs.collect { '"' + it + '"' }.join(' ')]
             }
         }
     }}
