--- a/build.gradle
+++ b/build.gradle
@@ -1,11 +1,11 @@
 import org.jetbrains.gradle.ext.Gradle
 
 plugins {
-    id("java")
-    id("java-library")
-    id("org.jetbrains.gradle.plugin.idea-ext") version "1.1.7"
-    id("com.gtnewhorizons.retrofuturagradle") version "1.3.+"
-    id("com.matthewprenger.cursegradle") version "1.4.0"
+    id 'java'
+    id 'java-library'
+    id 'org.jetbrains.gradle.plugin.idea-ext' version '1.1.7'
+    id 'com.gtnewhorizons.retrofuturagradle' version '1.+'
+    id 'com.matthewprenger.cursegradle' version '1.4.0'
 }
 
 // Add version to the jar name
@@ -17,14 +17,22 @@ java {
         languageVersion.set(JavaLanguageVersion.of(8))
         vendor.set(JvmVendorSpec.ADOPTIUM)
     }
-    // Generate sources and javadocs jars when building and publishing
+    // Generate sources jar when building and publishing
     withSourcesJar()
+}
+
+tasks.withType(JavaCompile).configureEach {
+    options.encoding = 'UTF-8'
+    options.fork = true
+    options.forkOptions.jvmArgs += '-Xmx4G'
 }
 
 minecraft {
     mcVersion = '1.12.2'
 
-    username = "Desoroxxx"
+    username = 'Desoroxxx'
+
+    extraRunJvmArguments.addAll('-Xmx6G', '-Xms4G', '-Dforge.logging.console.level=debug')
 
     injectedTags.put('ID', project.id)
     injectedTags.put('VERSION', project.version)
@@ -33,25 +41,6 @@ minecraft {
 // Generate a my.project.Tags class with the version number as a field
 tasks.injectTags.configure {
     outputClassName.set("io.redstudioragnarok.${project.id}.Tags")
-}
-
-// Replace id, and version in `mcmod.info`
-processResources {
-    inputs.property 'id', project.id
-    inputs.property 'version', project.version
-    filesMatching(['mcmod.info', 'pack.mcmeta']) { fcd ->
-        include 'mcmod.info'
-        fcd.expand (
-                'id': project.id,
-                'version': project.version
-        )
-    }
-}
-
-// Create configuration to include embedded dependencies into the jar
-configurations {
-    implementation
-    compile.extendsFrom(embed)
 }
 
 repositories {
@@ -71,47 +60,56 @@ dependencies {
     implementation rfg.deobf("curse.maven:ElenaiDodge2-442962:3343308")
 }
 
-jar {
-    // Add all embedded dependencies into the jar
-    from(provider{ configurations.embed.collect {it.isDirectory() ? it : zipTree(it)} })
-
-    manifest.attributes([
-            'ModSide': 'BOTH',
-    ])
+// Replace version and id in `mcmod.info`
+processResources {
+    inputs.property 'id', project.id
+    inputs.property 'version', project.version
+    filesMatching(['mcmod.info', 'pack.mcmeta']) { fcd ->
+        include 'mcmod.info'
+        fcd.expand (
+                'id': project.id,
+                'version': project.version
+        )
+    }
+    dependsOn 'compileJava'
 }
 
 idea {
     module { inheritOutputDirs = true }
 
-    module {
-        excludeDirs = [file(".github"), file(".gradle"), file(".idea"), file("build"), file("gradle"), file("run")]
-    }
+    module { excludeDirs = [file('.github'), file('.gradle'), file('.idea'), file('build'), file('gradle'), file('run')] }
 
     project { settings {
         runConfigurations {
-            "1. Client"(Gradle) {
-                taskNames = ["runClient"]
+            'Client'(Gradle) {
+                taskNames = ['runClient']
             }
-            "2. Server"(Gradle) {
-                taskNames = ["runServer"]
+            'Server'(Gradle) {
+                taskNames = ['runServer']
             }
-            "3. Obfuscated Client"(Gradle) {
-                taskNames = ["runObfClient"]
+            'Obfuscated Client'(Gradle) {
+                taskNames = ['runObfClient']
             }
-            "4. Obfuscated Server"(Gradle) {
-                taskNames = ["runObfServer"]
+            'Obfuscated Server'(Gradle) {
+                taskNames = ['runObfServer']
+            }
+            'Vanilla Client'(Gradle) {
+                taskNames = ['runVanillaClient']
+            }
+            'Vanilla Server'(Gradle) {
+                taskNames = ['runVanillaServer']
             }
         }
 
         compiler.javac {
             afterEvaluate {
-                javacAdditionalOptions = "-encoding utf8"
-                moduleJavacAdditionalOptions = [(project.id + ".main"): tasks.compileJava.options.compilerArgs.collect { '"' + it + '"' }.join(' ')]
+                javacAdditionalOptions = '-encoding utf8'
+                moduleJavacAdditionalOptions = [ (project.id + '.main'): tasks.compileJava.options.compilerArgs.collect { ''' + it + ''' }.join(' ') ]
             }
         }
     }}
 }
 
-tasks.named("processIdeaSettings").configure {
-    dependsOn("injectTags")
+tasks.named('processIdeaSettings').configure {
+    dependsOn('injectTags')
 }
